Update to ipu_map module to add block to show map of human rights cases. Allow selection of this block in section paragaphs.

--- a/web/modules/custom/ipu_map/ipu_map.libraries.yml
+++ b/web/modules/custom/ipu_map/ipu_map.libraries.yml
@@ -35,3 +35,22 @@ ipu_signatory_map:
     - core/drupal
     - core/jquery.once
     - core/drupalSettings
+
+ipu_human_rights_map:
+  version: 1.x
+  css:
+    theme:
+      css/ipu_map.css: {}
+  js:
+    js/jquery.mousewheel.min.js: {}
+    js/raphael-min.js: {}
+    js/jquery.mapael.min.js: {}
+    js/world_countries_un.js: {}
+    js/ipu_human_rights_map.js: {}
+
+  dependencies:
+    - core/jquery
+    - core/drupal.ajax
+    - core/drupal
+    - core/jquery.once
+    - core/drupalSettings
