--- a/config/sync/core.entity_form_display.taxonomy_term.country.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.country.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.taxonomy_term.country.field_geographic_region
     - field.field.taxonomy_term.country.field_geopolitical_group
+    - field.field.taxonomy_term.country.field_hr_cases_document
     - field.field.taxonomy_term.country.field_human_rights_cases
     - field.field.taxonomy_term.country.field_ipu_member
     - field.field.taxonomy_term.country.field_iso_code
@@ -14,6 +15,7 @@ dependencies:
     - taxonomy.vocabulary.country
   module:
     - chosen_field
+    - field_group
     - field_layout
     - layout_discovery
     - path
@@ -22,6 +24,21 @@ third_party_settings:
   field_layout:
     id: layout_onecol
     settings: {  }
+  field_group:
+    group_human_rights_cases:
+      children:
+        - field_human_rights_cases
+        - field_hr_cases_document
+      parent_name: ''
+      weight: 6
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Human rights cases'
+      region: content
 id: taxonomy_term.country.default
 targetEntityType: taxonomy_term
 bundle: country
@@ -36,19 +53,28 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_geographic_region:
-    weight: 9
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_geopolitical_group:
-    weight: 8
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
+  field_hr_cases_document:
+    weight: 8
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_human_rights_cases:
-    weight: 6
+    weight: 7
     settings:
       placeholder: ''
     third_party_settings: {  }
@@ -78,14 +104,14 @@ content:
     type: string_textfield
     region: content
   field_no_parliament_page:
-    weight: 12
+    weight: 14
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_principles_signatory:
-    weight: 7
+    weight: 9
     settings:
       display_label: true
     third_party_settings: {  }
@@ -108,12 +134,12 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   translation:
-    weight: 11
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
