--- a/config/sync/core.entity_view_display.taxonomy_term.country.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.country.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.taxonomy_term.country.field_geographic_region
     - field.field.taxonomy_term.country.field_geopolitical_group
+    - field.field.taxonomy_term.country.field_hr_cases_document
     - field.field.taxonomy_term.country.field_human_rights_cases
     - field.field.taxonomy_term.country.field_ipu_member
     - field.field.taxonomy_term.country.field_iso_code
@@ -27,7 +28,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_geographic_region:
-    weight: 8
+    weight: 9
     label: above
     settings:
       link: true
@@ -36,6 +37,14 @@ content:
     region: content
   field_geopolitical_group:
     weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_hr_cases_document:
+    weight: 10
     label: above
     settings:
       link: true
@@ -78,7 +87,7 @@ content:
     type: string
     region: content
   field_no_parliament_page:
-    weight: 7
+    weight: 8
     label: above
     settings:
       format: default
