--- a/config/sync/field.storage.taxonomy_term.field_hr_cases_document.yml
+++ b/config/sync/field.storage.taxonomy_term.field_hr_cases_document.yml
@@ -1,16 +1,16 @@
-uuid: e56e4c96-6dd5-4ca2-830b-e6ca44a219e2
+uuid: 099725b6-5713-4264-96dd-4561523d225a
 langcode: en
 status: true
 dependencies:
   module:
-    - media
+    - node
     - taxonomy
-id: taxonomy_term.field_human_rights_cases_docs
-field_name: field_human_rights_cases_docs
+id: taxonomy_term.field_hr_cases_document
+field_name: field_hr_cases_document
 entity_type: taxonomy_term
 type: entity_reference
 settings:
-  target_type: media
+  target_type: node
 module: core
 locked: false
 cardinality: -1
