Add new config exports
This is just config exports which hide the addtoany fields

--- a/config/sync/core.entity_view_display.node.committee_member.teaser.yml
+++ b/config/sync/core.entity_view_display.node.committee_member.teaser.yml
@@ -97,6 +97,7 @@ content:
             lb-col: false
             classes: {  }
 hidden:
+  addtoany: true
   field_country_cm: true
   field_custom_date_range_text: true
   field_designation_cm: true
