--- a/config/sync/core.entity_view_display.node.innovation_tracker_issue.default.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_issue.default.yml
@@ -4,11 +4,16 @@ status: true
 dependencies:
   config:
     - field.field.node.innovation_tracker_issue.body
+    - field.field.node.innovation_tracker_issue.field_caption
     - field.field.node.innovation_tracker_issue.field_date_single
+    - field.field.node.innovation_tracker_issue.field_hub_updates
+    - field.field.node.innovation_tracker_issue.field_innovation_tracker_story
     - field.field.node.innovation_tracker_issue.field_integer_single
+    - field.field.node.innovation_tracker_issue.field_media_image
     - node.type.innovation_tracker_issue
   module:
     - datetime
+    - image
     - text
     - user
 id: node.innovation_tracker_issue.default
@@ -23,6 +28,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_caption:
+    weight: 108
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
   field_date_single:
     weight: 103
     label: above
@@ -32,6 +44,22 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_hub_updates:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_innovation_tracker_story:
+    weight: 105
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_integer_single:
     weight: 104
     label: above
@@ -40,6 +68,15 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_integer
+    region: content
+  field_media_image:
+    weight: 107
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   links:
     weight: 100
