--- a/config/sync/core.entity_form_display.node.innovation_tracker_story.default.yml
+++ b/config/sync/core.entity_form_display.node.innovation_tracker_story.default.yml
@@ -3,12 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.browse_files_modal
     - field.field.node.innovation_tracker_story.body
-    - field.field.node.innovation_tracker_story.field_date_single
-    - field.field.node.innovation_tracker_story.field_integer_single
+    - field.field.node.innovation_tracker_story.field_caption
+    - field.field.node.innovation_tracker_story.field_country
+    - field.field.node.innovation_tracker_story.field_media_image
     - node.type.innovation_tracker_story
   module:
-    - datetime
+    - entity_browser
+    - field_group
     - field_layout
     - layout_discovery
     - path
@@ -17,6 +20,37 @@ third_party_settings:
   field_layout:
     id: layout_onecol
     settings: {  }
+  field_group:
+    group_basic_in:
+      children:
+        - langcode
+        - title
+        - field_country
+        - body
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Basic information'
+      region: content
+    group_media:
+      children:
+        - field_media_image
+        - field_caption
+      parent_name: ''
+      weight: 1
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Media
+      region: content
 id: node.innovation_tracker_story.default
 targetEntityType: node
 bundle: innovation_tracker_story
@@ -24,7 +58,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 5
     settings:
       rows: 9
       summary_rows: 3
@@ -33,22 +67,40 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_date_single:
-    weight: 123
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
-  field_integer_single:
-    weight: 122
+  field_caption:
+    weight: 11
     settings:
+      rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: number
+    type: text_textarea
+    region: content
+  field_country:
+    weight: 4
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_media_image:
+    weight: 10
+    settings:
+      entity_browser: browse_files_modal
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      view_mode: default
+      field_widget_replace: false
+      open: false
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+    type: entity_browser_file
     region: content
   langcode:
     type: language_select
@@ -59,7 +111,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -67,39 +119,39 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 5
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 9
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 3
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 4
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -107,8 +159,8 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 8
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
