--- a/config/sync/field.field.node.innovation_tracker_story.field_caption.yml
+++ b/config/sync/field.field.node.innovation_tracker_story.field_caption.yml
@@ -1,29 +1,26 @@
-uuid: 213383e7-d37f-46f5-a23f-a76f13fa77ef
+uuid: 84f2447c-ffde-49d8-8844-d80a87ae9734
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_date_single
+    - field.storage.node.field_caption
     - node.type.innovation_tracker_story
   module:
     - custom_add_another
-    - datetime
+    - text
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.innovation_tracker_story.field_date_single
-field_name: field_date_single
+id: node.innovation_tracker_story.field_caption
+field_name: field_caption
 entity_type: node
 bundle: innovation_tracker_story
-label: 'Issue date'
+label: Caption
 description: ''
-required: true
-translatable: false
-default_value:
-  -
-    default_date_type: now
-    default_date: now
+required: false
+translatable: true
+default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: datetime
+field_type: text_long
