--- a/config/sync/pathauto.pattern.content_innovation_tracker_story_en.yml
+++ b/config/sync/pathauto.pattern.content_innovation_tracker_story_en.yml
@@ -1,33 +1,33 @@
-uuid: 7f6ecc9b-646d-4b86-83e6-3b9bb5293ebc
+uuid: a8a975df-0d92-4ac7-8156-2573b5831eb3
 langcode: en
 status: true
 dependencies:
   module:
     - language
     - node
-id: content_innovation_tracker_issue
-label: 'Content - Innovation Tracker Issue - EN'
+id: content_innovation_tracker_story_en
+label: 'Content - Innovation Tracker Story - EN'
 type: 'canonical_entities:node'
-pattern: 'innovation-tracker/[node:title]'
+pattern: 'innovation-tracker/story/[node:title]'
 selection_criteria:
-  af9606b6-00c3-43bb-bc07-cb2c01abba07:
+  c6fac01a-3e8f-4806-b4de-be30041a0825:
     id: node_type
     bundles:
-      innovation_tracker_issue: innovation_tracker_issue
+      innovation_tracker_story: innovation_tracker_story
     negate: false
     context_mapping:
       node: node
-    uuid: af9606b6-00c3-43bb-bc07-cb2c01abba07
-  c424b7aa-1e84-470a-9063-ab94784a3ad8:
+    uuid: c6fac01a-3e8f-4806-b4de-be30041a0825
+  76f83f43-729d-48af-b571-bb5e37e43c1c:
     id: language
     langcodes:
       en: en
     negate: false
     context_mapping:
       language: 'node:langcode:language'
-    uuid: c424b7aa-1e84-470a-9063-ab94784a3ad8
+    uuid: 76f83f43-729d-48af-b571-bb5e37e43c1c
 selection_logic: and
-weight: -6
+weight: -4
 relationships:
   'node:langcode:language':
     label: Language
