--- a/config/sync/core.entity_form_display.node.hub_update.default.yml
+++ b/config/sync/core.entity_form_display.node.hub_update.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.hub_update.field_innovation_hub
     - node.type.hub_update
   module:
+    - field_group
     - field_layout
     - layout_discovery
     - path
@@ -15,6 +16,23 @@ third_party_settings:
   field_layout:
     id: layout_onecol
     settings: {  }
+  field_group:
+    group_basic_information:
+      children:
+        - langcode
+        - title
+        - body
+        - field_innovation_hub
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Basic information'
+      region: content
 id: node.hub_update.default
 targetEntityType: node
 bundle: hub_update
@@ -22,7 +40,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -31,12 +49,12 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_innovation_hub:
-    weight: 122
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -53,7 +71,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -61,39 +79,39 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 6
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 10
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 7
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 3
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 5
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -101,8 +119,8 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 9
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
