--- a/config/sync/field.field.node.hub_update.body.yml
+++ b/config/sync/field.field.node.hub_update.body.yml
@@ -16,12 +16,12 @@ id: node.hub_update.body
 field_name: body
 entity_type: node
 bundle: hub_update
-label: Body
+label: Content
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
 field_type: text_with_summary
