--- a/config/sync/core.entity_view_display.taxonomy_term.innovation_hub.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.innovation_hub.default.yml
@@ -3,10 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.innovation_hub.field_hub_type
     - field.field.taxonomy_term.innovation_hub.field_link_single
     - taxonomy.vocabulary.innovation_hub
   module:
     - link
+    - options
     - text
 id: taxonomy_term.innovation_hub.default
 targetEntityType: taxonomy_term
@@ -20,6 +22,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_hub_type:
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_link_single:
     weight: 1
     label: above
