--- a/config/sync/core.entity_view_display.node.hub_update.highlight.yml
+++ b/config/sync/core.entity_view_display.node.hub_update.highlight.yml
@@ -1,8 +1,9 @@
-uuid: fe2398a1-4b9f-4873-8424-b3efbae422ef
+uuid: 6f94c66e-e8a4-40bc-9358-08842a988e6d
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.highlight
     - field.field.node.hub_update.body
     - field.field.node.hub_update.field_innovation_hub
     - node.type.hub_update
@@ -13,7 +14,7 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: bs_2col_stacked
+      id: bs_1col_stacked
       library: null
       disable_css: false
       entity_classes: all_classes
@@ -25,36 +26,63 @@ third_party_settings:
           add_layout_class: 1
           attributes: ''
         regions:
+          top:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
           main:
             wrapper: div
             classes:
               col-sm-12: col-sm-12
             add_region_classes: 1
             attributes: ''
+          bottom:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
     regions:
-      left:
-        - body
+      top:
+        - node_title
         - field_innovation_hub
-id: node.hub_update.default
+      main:
+        - body
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+id: node.hub_update.highlight
 targetEntityType: node
 bundle: hub_update
-mode: default
+mode: highlight
 content:
   body:
     label: hidden
     type: text_default
-    weight: 0
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: main
   field_innovation_hub:
+    type: entity_reference_label
     weight: 1
+    region: top
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: main
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   addtoany: true
   langcode: true
