--- a/config/sync/core.entity_view_display.node.hub_update.teaser.yml
+++ b/config/sync/core.entity_view_display.node.hub_update.teaser.yml
@@ -5,10 +5,57 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.hub_update.body
+    - field.field.node.hub_update.field_innovation_hub
     - node.type.hub_update
   module:
+    - ds
     - text
     - user
+third_party_settings:
+  ds:
+    layout:
+      id: bs_1col_stacked
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        layout:
+          wrapper: div
+          classes:
+            row: row
+          add_layout_class: 1
+          attributes: ''
+        regions:
+          top:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
+          main:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
+          bottom:
+            wrapper: div
+            classes:
+              col-sm-12: col-sm-12
+            add_region_classes: 1
+            attributes: ''
+    regions:
+      top:
+        - node_title
+        - field_innovation_hub
+      main:
+        - body
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
 id: node.hub_update.teaser
 targetEntityType: node
 bundle: hub_update
@@ -16,17 +63,27 @@ mode: teaser
 content:
   body:
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    region: content
-  links:
-    weight: 100
+    type: text_default
+    weight: 3
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: main
+  field_innovation_hub:
+    type: entity_reference_label
+    weight: 1
+    region: top
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   addtoany: true
   langcode: true
+  links: true
