--- a/config/sync/core.entity_form_display.node.innovation_tracker_issue.default.yml
+++ b/config/sync/core.entity_form_display.node.innovation_tracker_issue.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field_group
     - field_layout
     - layout_discovery
+    - paragraphs
     - path
     - text
 third_party_settings:
@@ -114,13 +115,16 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_innovation_tracker_story:
+    type: entity_reference_paragraphs
     weight: 12
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete
     region: content
   field_integer_single:
     weight: 4
