--- a/config/sync/core.entity_view_display.node.innovation_tracker_issue.default.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_issue.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - node.type.innovation_tracker_issue
   module:
     - datetime
+    - entity_reference_revisions
     - image
     - text
     - user
@@ -53,12 +54,13 @@ content:
     type: entity_reference_label
     region: content
   field_innovation_tracker_story:
-    weight: 105
+    type: entity_reference_revisions_entity_view
+    weight: 109
     label: above
     settings:
-      link: true
+      view_mode: default
+      link: ''
     third_party_settings: {  }
-    type: entity_reference_label
     region: content
   field_integer_single:
     weight: 104
