--- a/config/sync/core.entity_view_display.node.innovation_tracker_story.full.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_story.full.yml
@@ -1,8 +1,9 @@
-uuid: 33bf4f41-4e6b-462d-a26f-a8bbd76e1b54
+uuid: d66b42b0-8cb0-4168-8b0e-5c777438f9ca
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.full
     - field.field.node.innovation_tracker_story.body
     - field.field.node.innovation_tracker_story.field_caption
     - field.field.node.innovation_tracker_story.field_country
@@ -18,46 +19,22 @@ dependencies:
 third_party_settings:
   ds:
     layout:
-      id: bs_2col_stacked
-      library: null
+      id: ds_2col_stacked
+      library: ds/ds_2col_stacked
       disable_css: false
       entity_classes: all_classes
       settings:
-        layout:
-          wrapper: div
-          classes:
-            row: row
-          add_layout_class: 1
-          attributes: ''
-        regions:
-          top:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
-          left:
-            wrapper: div
-            classes:
-              col-xs-12: col-xs-12
-              col-sm-12: col-sm-12
-              col-md-4: col-md-4
-            add_region_classes: 1
-            attributes: ''
-          right:
-            wrapper: div
-            classes:
-              col-xs-12: col-xs-12
-              col-sm-12: col-sm-12
-              col-md-8: col-md-8
-            add_region_classes: 1
-            attributes: ''
-          bottom:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
+        wrappers:
+          header: div
+          left: div
+          right: div
+          footer: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
       left:
         - group_image
@@ -85,10 +62,10 @@ third_party_settings:
         speed: fast
       label: image
       region: hidden
-id: node.innovation_tracker_story.default
+id: node.innovation_tracker_story.full
 targetEntityType: node
 bundle: innovation_tracker_story
-mode: default
+mode: full
 content:
   body:
     label: hidden
