--- a/config/sync/paragraphs.paragraphs_type.innovation_tracker_stories.yml
+++ b/config/sync/paragraphs.paragraphs_type.innovation_tracker_stories.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: innovation_tracker_stories
 label: 'Innovation Tracker Stories'
 icon_uuid: null
-description: ''
+description: 'List of Innovation Tracker Story content divided into titled sections.'
 behavior_plugins: {  }
