--- a/config/sync/core.entity_form_display.paragraph.innovation_tracker_stories.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.innovation_tracker_stories.default.yml
@@ -22,10 +22,12 @@ content:
     weight: 1
     settings:
       match_operator: CONTAINS
-      size: 60
+      size: '60'
       placeholder: ''
+      link_to_entity: false
+      link_to_edit_form: true
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entityqueue_dragtable
     region: content
   field_title:
     weight: 0
