--- a/config/sync/core.entity_view_display.node.innovation_tracker_issue.highlight.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_issue.highlight.yml
@@ -79,18 +79,18 @@ content:
     type: smart_trim
     weight: 3
     settings:
-      trim_length: 40
+      trim_length: 60
       trim_type: words
       trim_suffix: ''
       wrap_class: trimmed
       more_text: More
       more_class: more-link
       summary_handler: full
+      trim_options:
+        text: true
+        trim_zero: false
       wrap_output: false
       more_link: false
-      trim_options:
-        text: false
-        trim_zero: false
     third_party_settings:
       ds:
         ft:
