--- a/config/sync/core.entity_view_display.node.innovation_tracker_story.highlight.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_story.highlight.yml
@@ -14,7 +14,7 @@ dependencies:
     - ds
     - field_group
     - image
-    - text
+    - smart_trim
     - user
 third_party_settings:
   ds:
@@ -123,10 +123,21 @@ mode: highlight
 content:
   body:
     label: hidden
-    type: text_trimmed
+    type: smart_trim
     weight: 17
     settings:
-      trim_length: 40
+      trim_length: 60
+      trim_type: words
+      trim_suffix: ''
+      wrap_class: trimmed
+      more_text: More
+      more_class: more-link
+      summary_handler: full
+      trim_options:
+        text: true
+        trim_zero: false
+      wrap_output: false
+      more_link: false
     third_party_settings:
       ds:
         ft:
