--- a/config/sync/core.entity_view_display.node.innovation_tracker_story.teaser.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_story.teaser.yml
@@ -29,4 +29,7 @@ content:
     region: content
 hidden:
   addtoany: true
+  field_caption: true
+  field_country: true
+  field_media_image: true
   langcode: true
