--- a/config/sync/core.entity_form_display.taxonomy_term.innovation_hub.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.innovation_hub.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.innovation_hub.field_host_parliament
     - field.field.taxonomy_term.innovation_hub.field_hub_type
     - field.field.taxonomy_term.innovation_hub.field_link_single
     - taxonomy.vocabulary.innovation_hub
@@ -22,21 +23,30 @@ bundle: innovation_hub
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 3
     region: content
     settings:
+      placeholder: ''
+      rows: 5
+    third_party_settings: {  }
+  field_host_parliament:
+    weight: 2
+    settings:
+      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_hub_type:
-    weight: 32
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_link_single:
-    weight: 31
+    weight: 4
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -45,14 +55,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 5
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -60,13 +70,13 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 6
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
