--- a/config/sync/core.entity_view_display.node.innovation_tracker_issue.highlight.yml
+++ b/config/sync/core.entity_view_display.node.innovation_tracker_issue.highlight.yml
@@ -44,8 +44,8 @@ third_party_settings:
     regions:
       main:
         - node_title
-        - field_media_image
         - field_date_single
+        - field_media_image
         - body
         - node_link
     fields:
@@ -101,16 +101,23 @@ content:
             classes: {  }
     region: main
   field_date_single:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: date_month_and_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: datetime_default
     region: main
   field_media_image:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       image_style: teaser
