--- a/config/sync/field.field.taxonomy_term.innovation_hub.field_link_single.yml
+++ b/config/sync/field.field.taxonomy_term.innovation_hub.field_link_single.yml
@@ -19,7 +19,7 @@ bundle: innovation_hub
 label: Website
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
